@@ -1,4 +1,4 @@
-db695ebb19a7d49f7702806ae44ed844 *DESCRIPTION
+8d22a0905b47957cf0d383a5f80bd143 *DESCRIPTION
 93c2b7074680f19369d6be7152495b7f *NAMESPACE
 be6e90c378e4a2e44400eee9bcf98a0d *R/Ops.lfactor.R
 3160d24b106cc183353de9bb6381e9ac *R/all.R
@@ -9,7 +9,7 @@ c2d3fb2427b2ad39fbf0b58e647f59c1 *R/as.double.lfactor.R
 c5a6ac8395b4d844f9fd47c27cb85e12 *R/assign.R
 e783b6fd6cba3ea16131d71a44c2aafa *R/droplevels.R
 2d1cfd98c277192e4ae89a3f1cfdd266 *R/inlf.R
-c85aefd1fa5d3359e47b8b7f6ab9fe70 *R/lfactor.R
+881385c431afbbf3d52b43fcf248ffe6 *R/lfactor.R
 2364742367138ea8815d0561c61dd18b *R/lfactors-package.R
 cfe4657c14acc33c6602ab7ff7f4bba6 *R/llevels.R
 6dd49f33f5e943c95345313fdc7fa617 *R/mlfactor.R
@@ -18,16 +18,16 @@ efbc277c460f7f5ccbcb25106038ef60 *R/relevel.R
 f8b43d6770bf9aea37c70a596dda3897 *R/subset.R
 d071fd01a2f24b614e18edb7aabec8bf *R/switchllevels.R
 817c9dfb2e32b0a35c2fca203f9427f1 *R/zzz.R
-229d7a2220d2a6be214f58d7ffb5af95 *inst/NEWS.Rd
+2967889286323e6e868c82ca577eb372 *inst/NEWS.Rd
 7319109da3af422604a82a62deef100c *man/as.factor.lfactor.Rd
 ba47bc423fe429dd1b2b546290b6835a *man/as.integer.lfactor.Rd
 604507c926fee6395f43fe246361f8f3 *man/as.numeric.lfactor.Rd
 b8820bd3402db48f6fe78013eb0f5051 *man/examples/as.num.R
 c74444d7e9b4c26045ff91660a6c54d8 *man/examples/lfactor.R
 76644eb2889bf2d384f1ffa8f689bd1b *man/inlf.Rd
-75a787a9b1eba48ca1f579b3c53c9112 *man/lfactor.Rd
+47c3406c373b0463ad112f5565942392 *man/lfactor.Rd
 26088a7b82552110cf326c25c721eada *man/lfactors-package.Rd
 11281402960d1a15825b00d9020837d2 *man/llevels.Rd
 9bcd611b4aa186a1b25437191390c850 *man/mlfactor.Rd
 4f2745558b3725b2303b0f715162ddce *tests/testthat.R
-e87c5d7fd9f7f604e3a8b4de2bb21f93 *tests/testthat/test-equals.R
+5fabd80b939661e1077020590109d988 *tests/testthat/test-equals.R
